fix play/pause button overlap on mobile

--- a/src/components/playPauseButtons/playPauseButtons.css
+++ b/src/components/playPauseButtons/playPauseButtons.css
@@ -197,7 +197,7 @@
 
 @media screen and (max-width: 675px) {
   .play-pause-area {
-    margin-top: 3%;
+    margin-top: 4%;
     margin-bottom: 2%;
   }
 
